--- a/tech-note-app/package.json
+++ b/tech-note-app/package.json
@@ -9,11 +9,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.2",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
